--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+
+	<nav id = "nav_menu">
+		<ul>
+			<li> <a href = "index.html"> Home </a></li>
+		</ul>
+	</nav>
+
 	<main>
 		<section>
 			<h2>Our Mission</h2>
