--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
 			<li> <a href = "speakers.html"> Speakers </a></li>
 			<li> <a href = "luncheons.html"> Luncheons </a></li>
 			<li> <a href = "tickets.html"> Tickets </a></li>
-			<li> <a href = "about.html"> About Us </a></li>
+			<li> <a href = "about.html"> About Us </a>
+				<ul>
+					<li> <a href = "#"> Our History </a></li>
+					<li> <a href = "#"> Board of Directors </a></li>
+					<li> <a href = "#"> Past Speakers </a></li>
+					<li> <a href = "#"> Contact Information </a></li>
+				</ul>
+			</li>
 		</ul>
 	</nav>
 
