--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops! 
 				Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research 
 				Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research 
-				has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted 
+				has focused on the ecology and evolution of late Cretaceous dinosaurs, and he has conducted
 				fieldwork in a number of countries in Africa.</p>
-				<p><a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b></p>
+				<p><a href="speakers/c6_sampson.html">Read more.</a>&nbsp;<b><a href = "#"> Or play video!</a></b></p>
 			</article>
 			
 			<h2>Our Ticket Packages</h2>
