--- a/speakers/c6_sampson.html
+++ b/speakers/c6_sampson.html
@@ -6,6 +6,7 @@
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" href="../styles/c6_speaker.css">
+	<link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
@@ -14,6 +15,24 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
+
+	<nav id = "nav_menu">
+		<ul>
+			<li> <a href = "../index.html" class = "current"> Home </a></li>
+			<li> <a href = "../speakers.html"> Speakers </a></li>
+			<li> <a href = "../luncheons.html"> Luncheons </a></li>
+			<li> <a href = "../tickets.html"> Tickets </a></li>
+			<li> <a href = "../about.html"> About Us </a>
+				<ul>
+					<li> <a href = "#"> Our History </a></li>
+					<li> <a href = "#"> Board of Directors </a></li>
+					<li> <a href = "#"> Past Speakers </a></li>
+					<li> <a href = "#"> Contact Information </a></li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
+
 	<main>
 		<section>
 			<h1>Fossil Threads in the Web of Life</h1>
