changed copyright footer to my name and date.

--- a/speakers.html
+++ b/speakers.html
@@ -10,7 +10,8 @@
 
 <body>
     <footer>
-        <p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+        <p> &copy; Nathaniel Lewis Arevalo Macasaet, 11/12/2024</p>
+
     </footer>
 </body>
 </html>
