--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p> &copy; Nathaniel Lewis Arevalo Macasaet, 11/12/2024</p>
 	</footer>
 </body>
 </html>
