added This page is under Construction. Removed copyright footer.

--- a/speakers.html
+++ b/speakers.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <footer>
+    <main>
+        <h1>Speakers</h1>
+        <h2>This page is under construction.</h2>
+    </main>
+    <!--footer>
         <p> &copy; Nathaniel Lewis Arevalo Macasaet, 11/12/2024</p>
-
-    </footer>
+    </footer -->
 </body>
 </html>
