--- a/about.html
+++ b/about.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
-<footer>
+
+<main>
+    <h1>About</h1>
+    <h2>This page is under construction.</h2>
+</main>
+<!--footer>
     <p> &copy; Nathaniel Lewis Arevalo Macasaet, 11/12/2024</p>
-</footer>
+</footer -->
 </body>
 </html>
